--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+@import './btnConfig';
 
 * {
   box-sizing: border-box;
@@ -6,20 +7,48 @@
 }
 
 body {
-  background-color: $light-color;
+  background-color: $primary-color;
   font-family: $font-stack;
   line-height: 1;
 }
 
 img {
   border-radius: 50%;
+  width: 40%;
+  height: 40%;
+  margin-top: -4em;
 }
 
 a {
   text-decoration: none;
+  color: white;
 }
 
 .hero {
+  @include set-bg(lighten($primary-color, 0%));
+  height: 100vh;
+
+  nav ul {
+    display: flex;
+    float: right;
+    list-style-type: none;
+    column-gap: 40px;
+    margin-top: -1.2em;
+    
+  }
+  .hero-content {
+    display: flex;
+    width: 100%;
+    margin-top: 8em;
+    h1 {
+      font-size: 3em;
+    }
+    p {
+      font-size: 19px;
+    }
+  }
+  
+
   // This is where the bulk of the SCSS styling needs to be done
 
   // Take a look at the other files we've built already. How can they be useful here?
